Fixed word-wrap.

--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ body {
 	color: #cccccc;
 	background: url('images/bg.png');
 	font-family: 'Open Sans', sans-serif;
-	-ms-word-break: break-all;
-	word-break: break-all;
+	word-wrap: break-word;
 }
 
 h1, h2, h3, h4, h5, h6 {
